# InternMatchAI

./: .replit  Readme.md  app.py  dependencies.txt  extensions.py  matching_engine.py  models.py  oauth.py  pyproject.toml  replit.md  requirements.txt  routes.py  seed.py
instance/: internship_matching.db
static/css/: custom.css
static/js/: main.js
templates/: 404.html  500.html  admin_dashboard.html  admin_departments.html  applications.html  base.html  company_dashboard.html  company_profile_view.html  company_register.html  complete_company_profile.html  complete_department_profile.html  complete_student_profile.html  create_internship.html  department_applications.html  department_dashboard.html  department_profile_view.html  index.html  internship_applications.html  internship_details.html  matches.html  student_dashboard.html  student_profile_view.html  student_register.html
